@@ -2,6 +2,7 @@
 * Enhancements
   * Added #expected_title method to PageObject
   * Added #expected_element method to PageObject
+  * Added #execute_script method to PageObject
   * Updated to use selenium-webdriver 2.20.0
 * Fixes
   * Udates to the README - Thanks to p0deje and ivaravko
